--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=Study240522
-server.port=8081
+server.port=8080
+
+# MySQL ?????? ??
+spring.datasource.url=jdbc:mysql://133.186.241.167:3306/nhn_academy_19
+spring.datasource.username=nhn_academy_19
+spring.datasource.password=2/5l(ky6VP_bbyzZ
