--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://133.186.241.167:3306/nhn_academy_19
 spring.datasource.username=nhn_academy_19
 spring.datasource.password=2/5l(ky6VP_bbyzZ
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
